--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,6 +21,7 @@
       }
     </style>
 
+<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-white text-black">
     <div id="root"></div>
