--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,13 +8,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libertinus+Serif:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Manrope', sans-serif;
       }
       h1, h2, h3, h4, h5, h6, .font-serif-display {
-        font-family: 'Libertinus Serif Display', serif;
+        font-family: 'IBM Plex Serif', serif;
       }
       html {
         scroll-behavior: smooth;
